scripts, style, .env file example